--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -5,6 +5,7 @@
     android:orientation="vertical">
 
     <TextView
+        android:id="@+id/tv_main_activity"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Main Activity" />
