--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -8,5 +8,140 @@
         android:id="@+id/tv_main_activity"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Main Activity" />
+        android:text="@string/main_activity" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Button" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <View
+            android:id="@+id/view_blue"
+            android:layout_width="@dimen/item_size"
+            android:layout_height="@dimen/item_size"
+            android:background="@color/colorPrimary" />
+
+        <TextView
+            android:id="@+id/tv_1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toEndOf="@id/view_blue"
+            android:text="tv1 is in a relative layout" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <View
+            android:layout_width="@dimen/item_size"
+            android:layout_height="@dimen/item_size"
+            android:background="@color/colorPrimary" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toEndOf="@id/view_blue"
+            android:text="This is exaclty the same with a linear layout" />
+
+    </LinearLayout>
+
+    <HorizontalScrollView
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/item_size">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <View
+                android:layout_width="@dimen/item_size"
+                android:layout_height="@dimen/item_size"
+                android:background="@color/colorPrimary" />
+
+            <View
+                android:layout_width="@dimen/item_size"
+                android:layout_height="@dimen/item_size"
+                android:background="@color/colorPrimaryDark" />
+
+            <View
+                android:layout_width="@dimen/item_size"
+                android:layout_height="@dimen/item_size"
+                android:background="@android:color/white" />
+
+            <View
+                android:layout_width="@dimen/item_size"
+                android:layout_height="@dimen/item_size"
+                android:background="@color/colorAccent" />
+
+            <View
+                android:layout_width="@dimen/item_size"
+                android:layout_height="@dimen/item_size"
+                android:background="@android:color/holo_blue_bright" />
+
+            <View
+                android:layout_width="@dimen/item_size"
+                android:layout_height="@dimen/item_size"
+                android:background="@color/colorPrimary" />
+
+            <View
+                android:layout_width="@dimen/item_size"
+                android:layout_height="@dimen/item_size"
+                android:background="@color/colorPrimaryDark" />
+
+            <View
+                android:layout_width="@dimen/item_size"
+                android:layout_height="@dimen/item_size"
+                android:background="@android:color/white" />
+
+            <View
+                android:layout_width="@dimen/item_size"
+                android:layout_height="@dimen/item_size"
+                android:background="@color/colorAccent" />
+
+            <View
+                android:layout_width="@dimen/item_size"
+                android:layout_height="@dimen/item_size"
+                android:background="@android:color/holo_blue_bright" />
+
+        </LinearLayout>
+    </HorizontalScrollView>
+
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="@string/this_is_an_hint"
+        android:inputType="none"
+        android:lines="1"
+        android:maxLines="1" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="@dimen/activity_margin"
+        android:layout_marginStart="@dimen/activity_margin"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_phone_black_24dp" />
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/this_is_an_hint_for_number_edit"
+            android:inputType="phone"
+            android:lines="1"
+            android:maxLines="1" />
+    </LinearLayout>
 </LinearLayout>
