--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
 <resources>
     <dimen name="item_size">48dp</dimen>
     <dimen name="activity_margin">16dp</dimen>
+    <dimen name="text_large">22sp</dimen>
 </resources>
