--- a/app/src/main/res/layout/activity_sync_git_repositories.xml
+++ b/app/src/main/res/layout/activity_sync_git_repositories.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/ll"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -19,8 +20,8 @@
             android:id="@+id/et_user"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:imeOptions="actionSearch"
             android:hint="@string/write_user_name"
+            android:imeOptions="actionSearch"
             android:inputType="text"
             android:lines="1"
             android:maxLines="1" />
@@ -49,9 +50,10 @@
             android:visibility="gone" />
     </RelativeLayout>
 
-    <TextView
-        android:id="@+id/activity_ws_tv_result"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/activity_main_recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        />
 </LinearLayout>
 
