--- a/app/src/main/res/layout/item_repository_2.xml
+++ b/app/src/main/res/layout/item_repository_2.xml
@@ -15,6 +15,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="@dimen/activity_margin"
+            android:textAllCaps="true"
+            android:background="@color/colorPrimaryDark"
             tools:text="Toto le repo" />
     </LinearLayout>
 </android.support.v7.widget.CardView>
